developer/src/kmc-package/test/fixtures/invalid/error_package_name_cannot_be_blank_3.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <!-- Missing <Info>/<Name/> -->
  <Files>
    <File>
      <Name>khmer_angkor.kmx</Name>
      <Description>Keyboard Khmer Angkor</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Khmer Angkor</Name>
      <ID>khmer_angkor</ID>
      <Version>1.3</Version>
      <Languages>
        <Language ID="km">Central Khmer (Khmer, Cambodia)</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
